# VK_xlibre_layer

./: .gitmodules  meson.build  readme.md
src/: VkLayer_xlibre_wsi.cpp  VkLayer_xlibre_wsi.json.in  meson.build
