project(
  'vk_hdr_layer',
  'c',
  'cpp',
  meson_version: '>=1.10.0',
  default_options: [
    'cpp_std=c++20',
    'warning_level=2',
  ],
)

cppc = meson.get_compiler('cpp')

data_dir = get_option('datadir')
prefix = get_option('prefix')
lib_dir = get_option('libdir')

add_project_arguments(cppc.get_supported_arguments([
  '-Wno-unused-parameter',
  '-Wno-missing-field-initializers',
  '-Wno-c99-designator',
  '-Wno-invalid-offsetof',
  '-Wno-unused-const-variable',
  '-Wno-volatile', # glm warning
  '-Wno-deprecated-volatile',
]), language: 'cpp')

add_project_arguments(cppc.get_supported_arguments([
  '-ffast-math',
]), language: 'cpp')

vulkan_dep = dependency('vulkan')

xcb_dep = dependency('xcb')
xlib_dep = dependency('x11')
x11xcb_dep = dependency('x11-xcb')
# Vulkan headers are installed separately from the loader (which ships the
# pkg-config file)
if not cppc.check_header('vulkan/vulkan.h', dependencies: vulkan_dep)
  error('Missing vulkan-headers')
endif

subdir('src')
